--- a/package.json
+++ b/package.json
@@ -6,9 +6,24 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "typecheck": "tsc --noEmit",
+    "sync:docs": "rsync -av --delete src/ docs/src/",
+    "agent:browser": "tsx tools/browser-control/server.ts",
+    "agent:browsers": "playwright install",
+    "postinstall": "playwright install"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "playwright": "^1.48.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.30",
+    "tsx": "^4.19.2",
+    "typescript": "^5.4.0",
     "vite": "^5.4.0"
   }
 }
