Refactor GitHub Actions workflow to disable push triggers and add manual run input. Update hue-controller logic for better filter management and apply changes to WebGL rendering structure. Enhance index.html with new tool links and improve styles for layering. Adjust z-index values for better visual hierarchy in styles.css. Update webgl.js to streamline stage management and filter application.

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,9 +1,12 @@
 name: Deploy static site to GitHub Pages
 
 on:
-  push:
-    branches: ["main"]
   workflow_dispatch:
+    inputs:
+      note:
+        description: "Manual run only — disabled for push triggers"
+        required: false
+        default: "disabled"
 
 permissions:
   contents: read
