--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "agent:browser": "tsx tools/browser-control/server.ts",
     "agent:browsers": "playwright install",
     "catalog:component-rips": "node tools/portal/generate-component-rips-manifest.mjs",
+    "thumbnails:generate": "node tools/portal/generate-component-thumbnails.mjs",
+    "thumbnails:force": "node tools/portal/generate-component-thumbnails.mjs --force",
+    "inventory:scan": "node tools/portal/update-component-inventory.mjs",
     "postinstall": "playwright install",
     "studio:dev": "VITE_CFG=vite.studio.config.ts bash tools/portal/start-studio.sh",
     "studio:stop": "bash tools/portal/stop-studio.sh",
