--- a/package.json
+++ b/package.json
@@ -49,29 +49,30 @@
     "@monaco-editor/react": "^4.7.0",
     "fabric": "6.7.1",
     "flubber": "^0.4.2",
+    "framer-motion": "^11.0.0",
     "gsap": "^3.13.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.552.0",
     "monaco-editor": "^0.53.0",
+    "paper": "^0.12.18",
     "playwright": "^1.48.2",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^7.9.5",
     "zod": "^3.23.8",
-    "framer-motion": "^11.0.0",
-    "zustand": "^5.0.8",
-    "paper": "^0.12.18"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@playwright/test": "^1.48.2",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.30",
+    "@types/paper": "^0.12.0",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
-    "@types/paper": "^0.12.0",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.19",
+    "baseline-browser-mapping": "^2.9.15",
     "cors": "^2.8.5",
     "electron": "^39.2.3",
     "express": "^5.1.0",
